# chainsmith-recon

./: .env  chainsmith.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api_models.py  check_launcher.py  check_resolver.py  cli.py  cli_client.py  component_loader.py  config.py  scan_overrides.py  scan_presets.py  scan_session.py
app/advisors/: __init__.py  base.py  registry.py  scan_analysis_advisor.py
app/advisors/check_proof/: __init__.py  advisor.py  config.yaml  contract.yaml
app/advisors/check_proof/tests/: test_check_proof.py
app/advisors/scan_analysis/: __init__.py  advisor.py  config.yaml  contract.yaml
app/advisors/scan_analysis/tests/: test_scan_analysis.py
app/advisors/scan_planner/: __init__.py  advisor.py  config.yaml  contract.yaml
app/advisors/scan_planner/tests/: test_scan_planner.py
app/agents/: base.py  chainsmith.py  registry.py
app/agents/adjudicator/: __init__.py  agent.py  config.yaml  contract.yaml
app/agents/adjudicator/tests/: test_adjudicator.py
app/agents/coach/: __init__.py  agent.py  config.yaml  contract.yaml
app/agents/coach/tests/: test_coach.py
app/agents/researcher/: __init__.py  agent.py  config.yaml  contract.yaml
app/agents/researcher/tests/: test_researcher.py
app/agents/triage/: __init__.py  agent.py  config.yaml  contract.yaml
app/agents/triage/tests/: test_triage.py
app/checks/: base.py
app/checks/agent/: __init__.py
app/checks/agent/agent_callback_injection/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_context_overflow/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_cross_injection/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_discovery/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_framework_exploits/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_framework_version/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_goal_injection/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_loop_detection/: __init__.py  check.py  config.yaml  contract.yaml
app/checks/agent/agent_memory_extraction/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_memory_poisoning/: __init__.py  check.py  config.yaml  contract.yaml
app/checks/agent/agent_multi_agent_detection/: __init__.py  check.py  config.yaml  contract.yaml
app/checks/agent/agent_privilege_escalation/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_reflection_abuse/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_state_manipulation/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_streaming_injection/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_tool_abuse/: __init__.py  check.py  contract.yaml
app/checks/agent/agent_trust_chain/: __init__.py  check.py  contract.yaml
app/checks/ai/: __init__.py
app/checks/ai/adversarial_input/: __init__.py  check.py  contract.yaml
app/checks/ai/ai_adversarial_input/: __init__.py  (+2 more)
app/checks/cag/: __init__.py
app/checks/custom/: __init__.py
app/checks/mcp/: __init__.py
app/checks/network/: __init__.py
app/checks/rag/: __init__.py
app/checks/web/: __init__.py
app/components/: __init__.py  base.py  config_models.py  config_resolver.py  contracts.py
app/data/: presets.yaml
app/data/endpoints/: chat_paths.yaml  embedding_paths.yaml  model_info_paths.yaml
app/data/payloads/: agent_goal_injection.yaml  input_format_injection.yaml  mcp_template_injection.yaml
app/data/wordlists/: subdomains.txt
app/dev/: __init__.py  codemod.py  migrate.py  registry_diff.py  rename.py  scaffold.py  scan_diff.py  split_tests.py
app/engine/: adjudication.py  chains.py  chainsmith.py  chat.py  scanner.py  triage.py
app/gates/: __init__.py  base.py  registry.py
app/gates/guardian/: __init__.py  config.yaml  contract.yaml  gate.py
app/lib/: datafiles.py
app/routes/: advisor.py  checks.py  scan.py
app/swarm/: agent.py  runner.py
docs/: pipeline.md  vocabulary-dev.md
docs/future-ideas/: module-system-design.md  next-steps.txt  phase56-component-modularization.md
scenarios/demo-domain/: scenario.json
scenarios/fakobanko/: docker-compose.yml  scenario.json
scenarios/fakobanko/data/: session.json
static/: index.html  scan.html
static/css/: common.css  index.css
static/js/: api.js
tests/: test_contract_integrity.py
tests/checks/: test_agent_registration.py  test_cag_registration.py  test_check_config_save.py  test_component_metadata.py  test_config_validation.py  test_infer_suite.py  test_mcp_invocation_safety.py  test_network_dns.py  test_network_geoip.py  test_network_http_methods.py  test_network_ipv6.py  test_network_registration.py  test_network_reverse_dns.py  test_network_service_probe.py  test_network_traceroute.py  test_network_whois.py  test_port_profiles.py  test_rag_registration.py  test_web.py  test_web_default_debug.py  test_web_registration.py
tests/cli/: test_cli.py
tests/core/: test_agent_registry_config.py  test_base_check.py  test_chain.py  test_chainsmith_agent.py  test_config_provenance.py  test_on_critical.py  test_operator_context.py  test_scan_session.py  test_team_context.py  test_writers.py
tests/db/: test_db_orchestrator.py  test_db_repositories.py
tests/llm/: test_datafiles.py
tests/reports/: conftest.py  test_report_compliance.py  test_report_delta.py  test_reports_sarif.py  test_viz_coverage.py  test_viz_heatmap.py  test_viz_radar.py  test_viz_timeline.py
tests/scanning/: test_proof_of_scope.py  test_proof_of_scope_ops.py  test_scan_advisor.py  test_scan_overrides.py  test_scan_planner_advisor.py  test_scan_presets.py  test_scan_stream_api.py  test_scans_api.py  test_scans_live_api.py  test_scenario_coverage.py  test_simulated_check.py  test_simulated_check_host.py
(+819 files in other folders)
