[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainsmith-recon"
version = "1.2.0"
description = "AI reconnaissance framework for penetration testers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Chainsmith Contributors" }
]
keywords = [
    "security",
    "ai",
    "reconnaissance",
    "penetration-testing",
    "llm",
    "mcp",
    "rag",
    "red-team",
    "offensive-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "click>=8.1.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/infosecinnovations/chainsmith-recon"
Documentation = "https://github.com/infosecinnovations/chainsmith-recon#readme"
Repository = "https://github.com/infosecinnovations/chainsmith-recon.git"
Issues = "https://github.com/infosecinnovations/chainsmith-recon/issues"
Changelog = "https://github.com/infosecinnovations/chainsmith-recon/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]
pdf = [
    "xhtml2pdf>=0.2.11",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
chainsmith = "app.cli:main"

# ─── Tool Configuration ────────────────────────────────────────────────

# Single source of pytest configuration (Phase 56.1 / C12): pytest.ini was
# deleted and its settings folded in here. pytest reads only the first config
# file it finds, so the previous pytest.ini silently shadowed this block —
# --strict-markers, minversion, python_files/python_functions were all inert.
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Co-located component tests live under app/checks/<suite>/<check>/tests/ (Phase 56
# §10 risk 2). Sanction the component roots explicitly (not a blanket "app", which
# would let pytest wander into non-component code). app/agents added with 56.10;
# app/advisors | app/gates get added as 56.11-56.12 land.
testpaths = ["tests", "app/checks", "app/agents"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--tb=short",
    "-p",
    "no:anyio",
    # idiomatic mode for co-located / namespaced tests; avoids path-derived
    # module-name collisions and the __init__.py-per-tests/-dir requirement.
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "network: marks tests requiring network access",
    "unit: pure logic, no I/O",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "DTZ",    # flake8-datetimez (enforce tz-aware UTC, Phase 50)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict=
    "SIM108", # ternary operator
    "SIM102", # collapsible if statements (readability preference)
    "SIM117", # combine with statements (readability preference)
    "SIM116", # dict instead of if-elif (readability preference)
    "ARG001", # unused function arguments (common in callbacks/interfaces)
    "ARG002", # unused method arguments (common in overrides)
    "ARG005", # unused lambda arguments (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "chainsmith"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
# Scenario services are standalone demo containers (see Phase 50 audit).
"scenarios/**" = ["DTZ"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scenarios/",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["app"]
